--- a/src/containers/projects/Project.scss
+++ b/src/containers/projects/Project.scss
@@ -15,6 +15,23 @@
   gap: 1rem 1rem;
 }
 
+.image {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin: 6px;
+  margin-bottom: 1rem;
+  border-radius: 10px;
+  border: 1px solid
+}
+
+.projects {
+  padding: 1.5rem;
+  border-radius: 10px;
+  border: 1px solid rgba(211, 211, 211, 0.397);
+  justify-items: center;
+}
+
 /* Media Query */
 @media (max-width: 1380px) {
   .project-title {
@@ -22,6 +39,7 @@
   }
 }
 @media (max-width: 768px) {
+  
   .project-title {
     font-size: 30px;
     text-align: center;
